# lab06

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
banking/: CMakeLists.txt
banking/built/: CMakeCache.txt  Makefile  cmake_install.cmake
built/: CMakeCache.txt  Makefile  cmake_install.cmake  testBanking
built/banking/: Makefile  cmake_install.cmake
built/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
built/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
built/gtest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/: testBanking.cpp
